Bug 1696025 - Ensure we release our intermediate surface if we switch back to the DrawTarget's buffer in SWGL. r=lsalzman

When mapping a buffer for SWGL to draw to, we first attempt to lock the
draw target's buffer directly. If this fails we create an intermediate
surface for drawing and copy that to the draw target when finished. If
at a later point we successfully manage to lock the DT's buffer, we
should release the intermediate surface because we use its existence to
decide if we need to copy back into the DT or just release our lock.

Differential Revision: https://phabricator.services.mozilla.com/D107002